# GDPvalAgents

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent-skills.ts  index.ts  main.py  package-lock.json  package.json  pyproject.toml  todo.md  tsconfig.json
lib/: agents.ts
notebooks/: claude-agent-sdk-starter.ipynb
scripts/: anthropic-modal-starter.py  claude-agent-sdk-modal-fs.py  claude-code-modal.py  claude-code-web.py  sandbox_agent.py  simple_code_interpreter.py
tools/: README.md  logistics.ts
utils/: supabase.py  supabase.ts
