[project]
name = "gdpvalagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.71.0",
    "claude-agent-sdk>=0.1.4",
    "ipykernel>=7.0.1",
    "modal>=1.2.0",
    "openai>=2.4.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.22.0",
]
